argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goback-server
  labels:
    app.kubernetes.io/name: goback
spec:
  selector:
    app.kubernetes.io/name: goback
  ports:
  - port: 8000
    name: http
